--- a/src/components/CustomizationPanel.module.css
+++ b/src/components/CustomizationPanel.module.css
@@ -66,7 +66,6 @@
 
 @media (max-width: 55rem) {
   .customize {
-    margin-block-start: 1rem;
     grid-template-columns: 14rem auto;
     row-gap: 0.5rem;
   }
@@ -81,8 +80,9 @@
   }
 }
 
-@media (max-width: 37.5rem) {
+@media (max-width: 33.313rem) {
   .customize {
+    margin-block-start: 5.3rem;
     grid-template-columns: 1fr 1fr;
   }
 }
